# m3s

./: Cargo.toml  flake.nix
src/: args.rs  jpg.rs  main.rs
